ipc/ipdl/test/ipdl/ok/PMessageTaintedWithPassback.ipdl
[ChildProc=any]
sync protocol PMessageTaintedWithPassback {
child:
    [Tainted] async foo([NoTaint=passback] int id);
};
